Experimenting HyFD Sampling + Validation